syntax = "proto3";
option optimize_for = SPEED; // 快速解析
option java_package = "com.example.netty.protobuf2";    // 指定生成到哪个包下
option java_outer_classname = "MyDataInfo";    // 生成的外部类名，也是文件名


// protobuf 可以使用message管理其他message
message MyMessage{

    // 定义枚举类型
    enum DataType{
        StudentType = 0;    // 要求编号从0开始
        WorkerType = 1;
    }

    // 用 data_type 标识传的是哪一个枚举类型
    DataType data_type = 1;

    // 表示每次枚举类型最多只能出现其中的一个
    oneof dataBody{
        Student student = 2;
        Worker worker = 3;
    }
}


message Student{
    int32 id = 1;
    string name = 2;
}

message Worker{
    string name = 1;
    int32 age = 2;
}